--- a/FRONTEND/src/app/components/topbar/topbar.html
+++ b/FRONTEND/src/app/components/topbar/topbar.html
@@ -1,6 +1,7 @@
 <div class="topbar">
   <!-- Left: Brand -->
   <div class="brand-wrap">
+    <img src="/assets/images/images.jpg" class="brand-logo" alt="IR logo">
     <div class="brand">Indian Railways Assets Editor</div>
   </div>
 
